--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "google/apiclient": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "propaganistas/laravel-disposable-email": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
